[GREEN] Fixed spacing on counters.

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/green/ds_campaign.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/green/ds_campaign.sass
@@ -110,6 +110,15 @@ div[role="main"]
 .panel-row-actions
   background-color: #8DC641
 
+.panel-row-actions-stats
+  height: 190px
+  
+  .campaign-counter-label-top
+    margin-bottom: 18px
+  
+  .campaign-counter-number-top
+    margin-bottom: 18px
+
 // navigation
 #block-dosomething-campaign-styles-campaign-nav
   background: transparent
